    2 June 2012

xml.c supports reading from stdio (no rewind). Example of use:
type pr-xml-utf-8.xml | bracmat "put$(get$(,ML),\"pr-xml-utf-8.bra\",NEW)&"

    1 June 2012

Did some finishing, no essential code changes.

    1 May 2012

Added list of HTML entities. These are decoded to unicode codepoints and
encoded as utf-8 if an option HT is added.

get$("filename.html",HT,ML,TRM)

   29 April 2012

Restructured the (ancient) input function and renamed some identifiers to
English equivalents.
Added a source file, xml.c, that reads SGML, HTML and XML files.
Syntax:

get$(filename,ML)
get$(filename,ML,TRM)
get$(string,MEM,ML)
get$(string,MEM,ML,TRM)

An option HT is made, but does not work yet. Purpose: translate HTML entities.

   13 April 2012

The characters @ and % in front of a string now only turn off escaping with
the \ character inside the string if the string is surrounded by " characters.
Reason: the \L operator was not recognised if its lhs contained a % or @.

    9 February 2012

Corrected error in doPosition that was introduced with the latest
optimizations: the QGETAL bit was checked without also checking the
IS_OPERATOR bit. Found also an instance of QBREUK were this error
might have been made. (The MINUS, QBEUK, QGETAL and QNUL bits are
only valid on leaf nodes.)

     4 February 2012

Discovered that "greater than" relation implemented in the vgl function
wasn't transitive:
(1a.)+(10.)      -> (10.)+(1a.)
(1a.)+(10.)+(2.) -> (1a.)+(2.)+(10.)
Thus the order of (10.) and (1a.) depends on other terms.
Now the rule is: 
1) any number is smaller than any non-number
2) numbers are compared numerically
3) non-numbers are compared with strcmp

    25 January 2012

Improved handling of negative positions (positions counted from the end)
in lists, sums and products.

    24 January 2012

doPosition is buggy
    a (c,d): ? [-1

expressionLength  counts the wrong way. It must look at the top level operator 