@@ -63,7 +63,6 @@ project=
             & lst$($c,$n,APP)
           )
       : (=?l)
-    & lst$(l,l,NEW)
     & l$
     &     
         ' ( get'$n
