@@ -1,3 +1,12 @@
+   22 June 2012
+
+Correction in scompare(). The expression @(1b:~<1 b) did not evaluate 
+successfully, which it should. Did a clean-up of this function.
+
+    4 June 2012
+
+Introduced READMARKUPFAMILY macro to turn xml-stuff on (1) or off (0)
+
     2 June 2012
 
 xml.c supports reading from stdio (no rewind). Example of use:
